--- a/lst/wrong-code-bugs.tex
+++ b/lst/wrong-code-bugs.tex
@@ -1,19 +1,20 @@
 \lstset{language=[OpenCL]C}
 \begin{figure}
 	\centering %
-	\subfloat[Config $1+$ silently miscompiles, yields incorrect result.]{%
-		\noindent\mbox{\parbox{\columnwidth}{%
-				\lstinputlisting{lst/bug3}%
-			}%
-		}%
-	}\\%
-	\subfloat[Config $1-$ silently miscompiles, yields incorrect result.]{%
-		\noindent\mbox{\parbox{\columnwidth}{%
-				% cl_launcherCLgenResults/wrong-code/bug-report-nvidia-37044.sh
-				\lstinputlisting{lst/bug4}%
-			}%
-		}%
-	}\\%
-	\caption{Kernels for which compilers emit wrong-code.}%
+%	\subfloat[Config $1+$ silently miscompiles, yields incorrect result.]{%
+%		\noindent\mbox{\parbox{\columnwidth}{%
+%				\lstinputlisting{lst/bug3}%
+%			}%
+%		}%
+%	}\\%
+%	\subfloat[Config $1-$ silently miscompiles, yields incorrect result.]{%
+%		\noindent\mbox{\parbox{\columnwidth}{%
+%				% cl_launcherCLgenResults/wrong-code/bug-report-nvidia-37044.sh
+%				\lstinputlisting{lst/bug4}%
+%			}%
+%		}%{
+%	}\\%
+	\cc{TODO}
+	\caption{Kernels for which compilers silently emit wrong-code.}%
 \label{lst:compiler-crashes}%
 \end{figure}
