--- a/paper.tex
+++ b/paper.tex
@@ -10,7 +10,7 @@
 
 \input{sec/intro}
 \input{sec/overview}
-\input{sec/clgen}
+\input{sec/deepsmith}
 \input{sec/methodology}
 \input{sec/bugs}
 \input{sec/vs_clsmith}
