--- a/sec/bugs.tex
+++ b/sec/bugs.tex
@@ -1,6 +1,6 @@
 \section{Bugs Discovered in OpenCL Compilers}
 
-This section reports on the results of extensive testing of OpenCL compilers using CLgen. We found bugs in all the compilers we tested --- every compiler crashed, and every compiler silently generated wrong code. To date, we have submitted XX bug reports to compiler vendors. We divide our discussion by class of bug: first compiler and runtime crashes, then wrong-code bugs.
+This section reports on the results of extensive testing of OpenCL compilers using DeepSmith over the past several months. We found bugs in all the compilers we tested --- every compiler crashed, and every compiler silently generated wrong code. To date, we have submitted XX bug reports to compiler vendors. We divide our discussion by class of bug: first compiler and runtime crashes, then wrong-code bugs.
 
 \subsection{Compiler Crashes}
 
