--- a/sec/deepsmith.tex
+++ b/sec/deepsmith.tex
@@ -1,4 +1,4 @@
-\section{Test Case Generation using Deep Learning}
+\section{Test Case Generation through Deep Learning}
 
 Figure~\ref{fig:deeptune} shows the test case generation process. Our compiler test case generation approach consists of two parts: first, extending the state-of-the-art in deep learning program synthesis; the second, a general application of established differential testing methodologies for running code samples.
 
