--- a/sec/intro.tex
+++ b/sec/intro.tex
@@ -6,9 +6,9 @@
 \hl{Hugh comment}
 
 \noindent
-Optimizing compilers are large and complex programs, with a practically infinite scope of possible inputs. Fixed test-suites are inadequate for ensuring correct behavior over such a range of inputs, and the lack of formal specifications for sections of compilers renders formal verification unusable beyond isolated subcomponents. In spite of the challenges, compilers are a fundamental trusted technology, so identifying their bugs is of utmost importance.
+Optimizing compilers are large and complex programs, with a practically infinite scope of possible inputs. Fixed test-suites are inadequate for ensuring correct behavior over such a range of inputs, and the lack of formal specifications for sections of compilers renders formal verification unusable beyond isolated subcomponents. Yet, compilers are a fundamental trusted technology, and identifying their bugs is of utmost importance.
 
-Differential testing is a promising methodology for identifying compiler bugs. Figure~\ref{fig:difftest} shows the differential testing methodology. A grammar is defined over a subset of a programming language, and used to probabilistically generate a large, random program (test case). If a compiler crashes during compilation of a program, then a bug is found. Additionally, by collecting outcomes from multiple compilers, the outputs of the generated programs can be compared to determine if any of the compilers disagree; if so, a bug has been discovered. Typically, these generated programs are many hundreds or thousands of lines long. As such, an additional test case reduction process is usually required, iteratively mutating the test case in an attempt to produce a minimal working example which preserves the behavior of interest.
+Differential testing is a promising methodology for identifying compiler bugs. Figure~\ref{fig:difftest} shows the approach. A grammar is defined over a subset of a programming language, and used to probabilistically generate a large, random program (test case). \cc{TODO: Each feature of the grammar must be painstakingly and expertly engineered, meaning that, in practice, only a subset of language features are supported} If a compiler crashes during compilation of a program, then a bug is found. Additionally, by collecting outcomes from multiple compilers, the outputs of the generated programs can be compared to determine if any of the compilers disagree; if so, a bug has been discovered. Typically, these generated programs are many hundreds or thousands of lines long. As such, an additional test case reduction process is usually required, iteratively mutating the test case in an attempt to produce a minimal working example which preserves the behavior of interest.
 
 The current state of the art in compiler test case generation is Csmith~\cite{Yang2011}. Csmith defines a probabilistic grammar over a large subset of the C programming language, and recursively instantiates a program, using rigorous and conservative static and dynamic analysis to ensure that programs are guaranteed to be free from the 190 undefined behaviors of the C language specification.
 
@@ -27,22 +27,6 @@ Because Csmith programs are free form undefined behavior, there is only a single
 Developing a random program generator is a huge undertaking, requiring expert knowledge of the target programming language. CSmith~\cite{Yang2011} was developed over a period of years, and consists of over 40k lines of hand-written C++. CSmith interleaves static analysis with code generation, and inserts runtime checks for cases where static analysis is inadequate. The ``shape'' of CSmith programs is dictated by 80 probabilities; these were extensively hand tuned so that programs ``look right''.
 
 Grammar-based program generation tightly couples the generator logic with the target programming language. This makes them inflexible tools. For example, lifting CSmith from C to OpenCL~\cite{Lidbury2015a} took 9 months (confirmed by developers) and is over 8k lines of code, despite the large overlap between C and OpenCL (which is C with extensions). This huge development cost is extended to the reduction tools too, with CLReduce~\cite{Pflanzer2016} requiring extensions to OCLgrind.
-
-
-\begin{figure}
-\lstset{language=[OpenCL]C}
-% cl_launcherCLgenResults/runtime_crash/bug-report-intel-30870.sh
-\begin{lstlisting}
-__kernel void A() {
-  __builtin_astype(d, uint4);
-}
-\end{lstlisting}
-  \caption{%
-  	 Of the 10 compilers we tested, 6 crash with segfault when compiling this kernel.
-  	 CLSmith does not generate erroneous code such as this.
-  }%
-  \label{fig:motivating-segfault}
-\end{figure}
 
 \begin{figure}
 \lstset{language=[OpenCL]C}
@@ -64,9 +48,24 @@ __kernel void A(__global int* a, __global int* b) {
 \end{lstlisting}
 \caption{%
 	Configs.\ $10\pm$ race condition when global size > 1 (fixed upstream).
-	CLSmith does not allow thread index to control program flow.%
+	\cc{Though simple, this is code is difficult to produce using existing approaches - CLSmith does not allow thread index to affect program flow.}%
 }
 \label{lst:oclgrind-llvm-densemap-assertion}
+\end{figure}
+
+\begin{figure}
+\lstset{language=[OpenCL]C}
+% cl_launcherCLgenResults/runtime_crash/bug-report-intel-30870.sh
+\begin{lstlisting}
+__kernel void A() {
+  __builtin_astype(d, uint4);
+}
+\end{lstlisting}
+\caption{%
+	Of the 10 compilers we tested, 6 crash with segfault when compiling this kernel.
+	CLSmith does not generate erroneous code such as this.
+}%
+\label{fig:motivating-segfault}
 \end{figure}
 
 \cc{We propose \ldots}
@@ -86,8 +85,8 @@ In this work we target OpenCL, an open standard for programming heterogeneous sy
 We make the following contributions:
 %
 \begin{itemize}
-\item we find bugs faster than state-of-the-art. In 48 hours we discovered and report XX bugs in compiler and open source OpenCL implementations, XX\% more than CLSmith over the same time period;
+\item we present \emph{DeepSmith}, a novel, language-agnostic approach to generating compiler test cases, inferred from open source code. We \emph{infer} programming language use from examples. CLSmith requires expert-driven development for every language feature supported. 40+k lines of C++ vs a few hundred lines of Python.
 \item we find bugs that the state-of-the-art cannot, covering more components of the compiler. E.g. compiler crashes from invalid inputs;
-\item our test cases are more interpretable than other program generators, since our code is modeled on human-like constructs. Average unreduced test case size is XX lines of code, XX$\times$ fewer than CLSmith programs even after hours spent reducing;
-\item our tool is not language specific. We \emph{infer} programming language use from examples. CLSmith requires expert-driven development for every language feature supported. 40+k lines of C++ vs a few hundred lines of Python.
+\item we find bugs faster than state-of-the-art. In 48 hours we discovered and report XX bugs in compiler and open source OpenCL implementations, XX\% more than CLSmith over the same time period;
+\item our test cases are more interpretable than other program generators, since our code is modeled on human-like constructs. Average test case size is two orders of magnitude smaller than state-of-the-art;
 \end{itemize}
