--- a/sec/vs_clsmith.tex
+++ b/sec/vs_clsmith.tex
@@ -1,6 +1,6 @@
 \section{Comparison to State-of-the-art}\label{sec:vs_clsmith}
 
-In this section we compare CLgen against CLSmith, the state-of-the-art in OpenCL fuzz testing. For each of the 10 OpenCL configurations, we run the  48 consecutive
+In this section we compare our approach against CLSmith, the state-of-the-art in OpenCL fuzz testing. For each of the 10 OpenCL configurations, we run the  48 consecutive
 
 Total runtime for a test cases consists of the generation time, the time to execute the test harness on a configuration.
 
@@ -8,23 +8,23 @@ Both testing frameworks were used for 48 hours each. CLSmith was configured with
 
 %\subsection{Experimental Setup}
 %
-%Each OpenCL configuration from Table~\ref{tab:platforms} was configured to run CLgen and CLSmith test cases for 48 hours. This includes the time taken to generate and execute the test case. All experimental platforms were otherwise unloaded.
+%Each OpenCL configuration from Table~\ref{tab:platforms} was configured to run DeepSmith and CLSmith test cases for 48 hours. This includes the time taken to generate and execute the test case. All experimental platforms were otherwise unloaded.
 
 \subsection{Test Outcomes}
 
 Table~\ref{tab:outcomes} shows the outcomes of 48 hours of consecutive testing for each of the platforms from Table~\ref{tab:platforms}. We repeated the experiment twice, once with compiler optimizations disabled ($-$) for all configurations, and once with optimizations enabled ($+$).
 
-XX\% of CLSmith test cases fails to produce an output (non-\cmark). Proportionally, CLgen test cases are less likely to produce an output, with XX\%
+XX\% of CLSmith test cases fails to produce an output (non-\cmark). Proportionally, DeepSmith test cases are less likely to produce an output, with XX\%
 
-An average of XX CLSmith and XX CLgen test cases were evaluated on each device, with an average time per test case of XX and XX respectively. The XX-fold increase in testing throughput achieved by CLgen is a result of XXX. Figure~\ref{fig:runtimes} shows runtimes. For CLgen, generation time scales linearly with program size (benchmarked at 465 cps). We also include test harness overhead, though this could be implemented away. Disabling optimizaitons generally does not affect testing throughput significantly, with the exception of Config XX, in which the slow compilation of kernels containing structs greatly reduces the number of test cases evaluated. This is a known issue --- in XX the authors omnit testing on this configuration for this reason.
+An average of XX CLSmith and XX DeepSmith test cases were evaluated on each device, with an average time per test case of XX and XX respectively. The XX-fold increase in testing throughput achieved by DeepSmith is a result of XXX. Figure~\ref{fig:runtimes} shows runtimes. For DeepSmith, generation time scales linearly with program size (benchmarked at 465 cps). We also include test harness overhead, though this could be implemented away. Disabling optimizaitons generally does not affect testing throughput significantly, with the exception of Config XX, in which the slow compilation of kernels containing structs greatly reduces the number of test cases evaluated. This is a known issue --- in XX the authors omnit testing on this configuration for this reason.
 
-Column \textbf{bc} is of immediate value for developers; for all other outcomes, voting heuristics are required to expose anomalous results. CLSmith crashed 8 of the 20 configurations, CLgen crashed all of them. See Section X for examples of bugs found from build crashes.
+Column \textbf{bc} is of immediate value for developers; for all other outcomes, voting heuristics are required to expose anomalous results. CLSmith crashed 8 of the 20 configurations, DeepSmith crashed all of them. See Section X for examples of bugs found from build crashes.
 
 The integrated GPU Conifgs.\ we tested ($3\pm$) frequently failed to compile CLSmith kernels, resulting in thousands of compiler crashes \textbf{bc} or timeouts \textbf{bc}. 
 % SELECT stderr,COUNT(*) FROM CLSmithResults LEFT JOIN CLSmithMetas ON CLSmithResults.id=CLSmithMetas.id WHERE testbed_id=13 AND CLSmithResults.outcome='bc' AND cumtime < 48 * 3600 GROUP BY CLSmithResults.stderr;
-Of the build crashes, 68\% failed silently, and the remainder were caused by the same pointer assignment assertion for which CLgen generated a 4 line test case in Figure~\ref{lst:intel-llvm-assertion}. \cc{We also generated silent build crashes, but with an average line count of XX, versus CLSmith's line count of XX.}
+Of the build crashes, 68\% failed silently, and the remainder were caused by the same pointer assignment assertion for which DeepSmith generated a 4 line test case in Figure~\ref{lst:intel-llvm-assertion}. \cc{We also generated silent build crashes, but with an average line count of XX, versus CLSmith's line count of XX.}
 
-For all except configuration $3\pm$, CLgen exposes more compiler crashes than CLSmith. On average, CLgen hangs the compiler more frequently. We also submitted XX of the bugs found using CLSmith, after reduction.
+For all except configuration $3\pm$, DeepSmith exposes more compiler crashes than CLSmith. On average, DeepSmith hangs the compiler more frequently. We also submitted XX of the bugs found using CLSmith, after reduction.
 
 % 622 total bc
 Configs.\ $4$, $5$, $6$, and $7$ have a number CLSmith bc outcomes when optimizations are enabled. Of the non-silent crashes, the cause is the OpenCL vectorizer pass, same as Figure~\ref{lst:intel-vectorizer-segfault}.
@@ -40,7 +40,7 @@ Table~\ref{tab:classifications} shows the results of applying voting heuristics 
 	\centering %
 	\includegraphics[width=\columnwidth]{build/img/runtimes}%
 	\caption{%
-		Test case runtimes, excluding timeouts. On average, test case generation and exeuction is $2.86\times$ and $4.70\times$ faster with CLgen than CLSmith, respectively. \cc{reduction times}%
+		Test case runtimes, excluding timeouts. On average, test case generation and exeuction is $2.86\times$ and $4.70\times$ faster with DeepSmith than CLSmith, respectively. \cc{reduction times}%
 	}%
 	\label{fig:runtimes} %
 \end{figure}
@@ -50,7 +50,7 @@ Table~\ref{tab:classifications} shows the results of applying voting heuristics 
 	\scriptsize %
 	\centering %
 	\input{build/tab/outcomes}
-	\caption{Results from 48 hours of testing using CLSmith and CLgen. Configuration \#. as per Table~\ref{tab:platforms}. $\pm$ denotes optimizations off ($-$) vs on ($+$). The remaining columns denote build failure (\textbf{bf}), build crash (\textbf{bc}), build timeout (\textbf{bto}), runtime crash (\textbf{c}), timeout (\textbf{to}), and passed (\textbf{\cmark}) outcomes for CLSmith and CLgen, respectively.}
+	\caption{Results from 48 hours of testing using CLSmith and DeepSmith. Configuration \#. as per Table~\ref{tab:platforms}. $\pm$ denotes optimizations off ($-$) vs on ($+$). The remaining columns denote build failure (\textbf{bf}), build crash (\textbf{bc}), build timeout (\textbf{bto}), runtime crash (\textbf{c}), timeout (\textbf{to}), and passed (\textbf{\cmark}) outcomes for CLSmith and DeepSmith, respectively.}
 	\label{tab:outcomes}
 \end{table*}
 
@@ -58,11 +58,11 @@ Table~\ref{tab:classifications} shows the results of applying voting heuristics 
 	\scriptsize %
 	\centering %
 	\input{build/tab/megatable}
-	\caption{Using voting heuristics to expose anomalous results from 48 hours of testing using CLSmith and CLgen. Columns denote wrong-code (w), build failure (\textbf{bf}), runtime crash (\textbf{c}), and timeout (\textbf{to}) classifications for CLSmith and CLgen, respectively.}
+	\caption{Using voting heuristics to expose anomalous results from 48 hours of testing using CLSmith and DeepSmith. Columns denote wrong-code (w), build failure (\textbf{bf}), runtime crash (\textbf{c}), and timeout (\textbf{to}) classifications for CLSmith and DeepSmith, respectively.}
 	\label{tab:classifications}
 \end{table*}
 
-\cc{TODO: How long do reductions take? How many CLgen test cases can we run in that amount of time? Given the ratio of interesting CLgen test cases, how many more bugs could we find in the amount of time it takes to run a single reduction?}
+\cc{TODO: How long do reductions take? How many DeepSmith test cases can we run in that amount of time? Given the ratio of interesting DeepSmith test cases, how many more bugs could we find in the amount of time it takes to run a single reduction?}
 
 \cc{TODO: We note that we tested the wrong-code classification of CLSmith, finding that it does not affect the number of CLSmith wrong-code bugs.}
 
@@ -77,9 +77,9 @@ Oclgrind was resilient to CLSmith testing, yet we managed to trip it up during c
 
 Median CLSmith kernel is 1086 lines long (excluding headers). CLSmith kernels are unreadable, requiring automatic or manual test case reduction.
 
-For ``interesting'' programs: median CLgen kernel size is 12 lines. Median reduced CLSmith kernel size is 43 lines (894 lines before reduction). Figure~\ref{fig:kernel-sizes}.
+For ``interesting'' programs: median DeepSmith kernel size is 12 lines. Median reduced CLSmith kernel size is 43 lines (894 lines before reduction). Figure~\ref{fig:kernel-sizes}.
 
-Potentially interesting questions: What is the total lines of code which get run on each device during the tests? CLgen programs are smaller, but we get through more of them.
+Potentially interesting questions: What is the total lines of code which get run on each device during the tests? DeepSmith programs are smaller, but we get through more of them.
 
 \cc{What is the bug rate per line of code?}
 
@@ -88,7 +88,7 @@ Potentially interesting questions: What is the total lines of code which get run
 	\centering %
 	\includegraphics[width=\columnwidth]{build/img/kernel-sizes}%
 	\caption{%
-		Kernel line counts, grouped by classification. CLgen test cases are on average two orders of magnitude smaller than CLSmith, rendering reduction unnecessary \cc{maybe \ldots}.%
+		Kernel line counts, grouped by classification. DeepSmith test cases are on average two orders of magnitude smaller than CLSmith, rendering reduction unnecessary \cc{TODO: plot outcomes, not classifications. Maybe file size rather than line count? \ldots}.%
 	}%
 	\label{fig:kernel-sizes} %
 \end{figure}
