--- a/sec/overview.tex
+++ b/sec/overview.tex
@@ -15,4 +15,4 @@
 \end{table*}
 
 
-\paragraph{Bugs found} All configurations yielded bugs. Every compiler crashed, and every compiler silently generated wrong code. To date, we have submitted XX bug reports to compiler vendors. Of those, 14\% were cases where the compiler silently emits wrong-code, 41\% were compiler crashes, and the remainder were runtime crashes. In comparing our approach against the state-of-the-art in OpenCL compiler test case generation, we found our approach was able to \cc{\ldots}
+\paragraph{Bugs found} All configurations yielded bugs. Every compiler crashed, and the majority silently generated wrong code. To date, we have submitted XX bug reports to compiler vendors. Of those, 14\% were cases where the compiler silently emits wrong-code, 41\% were compiler crashes, and the remainder were runtime crashes. In comparing our approach against the state-of-the-art in OpenCL compiler test case generation, we found our approach was able to \cc{\ldots}
