--- a/sec/bugs.tex
+++ b/sec/bugs.tex
@@ -38,4 +38,7 @@ Figure~\ref{lst:oclgrind-llvm-densemap-assertion} exposed a race condition in sw
 
 \subsection{Wrong-code Bugs}
 
+Configs.\ $1+$, $2+$, $3-$, $4+$, $5-$, $6-$, $7+$, $8+$, $9-$, $10+$ miscompile~ref{lst:u}.
+
+
 \input{lst/wrong-code-bugs}
