--- a/lst/compiler-crash-bugs.tex
+++ b/lst/compiler-crash-bugs.tex
@@ -73,7 +73,7 @@
 		}%
 		\label{lst:gt2-compiler-hang}
 	}\\%
-	\subfloat[Config.\ $1+$ hangs during compilation (Config.\ $1-$ completes in 1.15s), Config.\ $10-$ hangs during execution (Config.\ $10+$ completes in 0.1s).]{%
+	\subfloat[Config.\ $1+$ hangs during compilation (Config.\ $1-$ completeHs in 1.15s), Config.\ $10-$ hangs during execution (Config.\ $10+$ completes in 0.1s).]{%
 	\noindent\mbox{\parbox{\columnwidth}{%
 			% CLgen program_id = 11982
 			\lstinputlisting{lst/bug14}%
