--- a/sec/vs_clsmith.tex
+++ b/sec/vs_clsmith.tex
@@ -41,7 +41,7 @@ Table~\ref{tab:classifications} shows the results of applying voting heuristics 
 	\centering %
 	\includegraphics[width=\columnwidth]{build/img/runtimes}%
 	\caption{%
-		Test case runtimes, excluding timeouts. On average, test case generation and exeuction is $2.86\times$ and $4.70\times$ faster with DeepSmith than CLSmith, respectively. \cc{reduction times}%
+		Test case runtimes, excluding timeouts. On average, test case generation and execution is $2.86\times$ and $4.70\times$ faster with DeepSmith than CLSmith, respectively. \cc{reduction times}%
 	}%
 	\label{fig:runtimes} %
 \end{figure}
