--- a/abstract.tex
+++ b/abstract.tex
@@ -1,4 +1,6 @@
 \begin{abstract}
+% ASPLOS: papers that open new areas with less rigorous evaluation are equally welcome and especially encouraged
+%
 Compilers should produce correct code for valid inputs, and produce meaningful errors when inputs are invalid. Fixed test-suites are incapable of ensuring these properties over the enormous range of possible inputs, and the complexity of optimizing compilers renders them beyond the scope of formal verification. In recent years, probabilistic grammar-based tools have proven effective at finding bugs by comparing the output of randomly generated programs across compilers.
 
 These tools require extensive development effort, and by design, yield large random programs which bare little resemblance to actual real code written by human programmers. These ``implausible'' programs attempt to discover bugs using uncommon combinations of language constructs. \cc{\ldots}
