--- a/lst/wrong-code-bugs.tex
+++ b/lst/wrong-code-bugs.tex
@@ -7,6 +7,41 @@
 			}%
 		}%
 	}\\%
+%SELECT 	results.id as 'results_id',
+%device,
+%num,
+%testcase_id,
+%params_id,
+%gsize_x,
+%optimizations,
+%outcome,
+%stdout_id
+%FROM CLgenResults results
+%INNER JOIN Testbeds ON results.testbed_id = Testbeds.id
+%INNER JOIN Configurations ON results.testbed_id = Configurations.id
+%INNER JOIN CLgenTestCases testcases ON results.testcase_id = testcases.id
+%INNER JOIN cldriveParams params ON testcases.params_id = params.id
+%WHERE program_id = 67869
+%ORDER BY testcase_id, stdout_id, num;
+	\subfloat[Configs.\ $4+$, $6+$ incorrectly execute \texttt{if} branch.]{%
+	\noindent\mbox{\parbox{\columnwidth}{%
+			\lstinputlisting{lst/CLgenProgram-67869}%
+		}%
+	}%
+	\label{lst:intel-size_t-int}
+}\\%
 	\caption{Kernels for which compilers silently emit wrong-code.}%
 \label{lst:compiler-crashes}%
+\end{figure}
+
+
+\begin{figure}
+\begin{lstlisting}
+__kernel void A(__global double* a) {
+  int b = get_global_id(0);
+  if (b < - 1) { a[b] = 1; }
+}
+\end{lstlisting}
+\label{lst:intel-size_t-int-reduced}
+\caption{Hand-reduced Figure~\ref{lst:intel-size_t-int}.}
 \end{figure}
