--- a/sec/intro.tex
+++ b/sec/intro.tex
@@ -8,6 +8,8 @@
 \noindent
 Optimizing compilers are large and complex programs, with a practically infinite scope of possible inputs. Fixed test-suites are inadequate for ensuring correct behavior over such a range of inputs, and the lack of formal specifications for sections of compilers renders formal verification unusable beyond isolated subcomponents. Yet, compilers are a fundamental trusted technology, and identifying their bugs is of utmost importance.
 
+% XSmith: It is difficult to create effective fuzzers for programming language compilers and interpreters because these systems have highly structured inputs, but it is important that such fuzzers exist. Programming language implementations are critical software infrastructure: defects in compilers and interpreters can potentially have great costs in terms of software correctness and reliability, human productivity, and computer security. This project seeks to reduce the time and human effort needed to create sophisticated fuzzers for programming language implementations. In so doing, this project is expected to advance the state of the art in random software testing, improve the quality of several programming language implementations selected for study, and produce new open-source software tools that programmers can use to develop new and more effective fuzz testers.
+
 Differential testing is a promising methodology for identifying compiler bugs. Figure~\ref{fig:difftest} shows the approach. A grammar is defined over a subset of a programming language, and used to probabilistically generate a large, random program (test case). \cc{TODO: Each feature of the grammar must be painstakingly and expertly engineered, meaning that, in practice, only a subset of language features are supported} If a compiler crashes during compilation of a program, then a bug is found. Additionally, by collecting outcomes from multiple compilers, the outputs of the generated programs can be compared to determine if any of the compilers disagree; if so, a bug has been discovered. Typically, these generated programs are many hundreds or thousands of lines long. As such, an additional test case reduction process is usually required, iteratively mutating the test case in an attempt to produce a minimal working example which preserves the behavior of interest.
 
 The current state of the art in compiler test case generation is Csmith~\cite{Yang2011}. Csmith defines a probabilistic grammar over a large subset of the C programming language, and recursively instantiates a program, using rigorous and conservative static and dynamic analysis to ensure that programs are guaranteed to be free from the 190 undefined behaviors of the C language specification.
