--- a/lst/compiler-crash-bugs.tex
+++ b/lst/compiler-crash-bugs.tex
@@ -73,10 +73,9 @@
 		}%
 		\label{lst:gt2-compiler-hang}
 	}\\%
-	\subfloat[Config.\ $1+$ hangs during compilation (Config.\ $1-$ completeHs in 1.15s), Config.\ $10-$ hangs during execution (Config.\ $10+$ completes in 0.1s).]{%
+	\subfloat[Config.\ $1+$ hangs during compilation, as optimization time grows with the size of loop bounds. Configs.\ $1-$, $2\pm$ compile in under 1 second.]{%
 	\noindent\mbox{\parbox{\columnwidth}{%
-			% CLgen program_id = 11982
-			\lstinputlisting{lst/bug14}%
+			\lstinputlisting{lst/CLgenProgram-6992}%
 		}%
 	}%
 	\label{lst:gt2-compiler-hang}
