--- a/sec/bugs.tex
+++ b/sec/bugs.tex
@@ -27,6 +27,67 @@ This kernel Figure~\ref{lst:crash-almost-everything} crashes all Intel compilers
 
 \input{lst/compiler-crash-bugs}
 
+\subsection{Compiler Hangs}
+
+Configs.\ $1+$ and $2+$ hang on large loop bounds. Configs.\ $3\pm$ hang while assigning a value from a pointer address. Configs.\ $4+$, $5+$, $6+$, $7+$ hang on non-terminating while loops.
+
+\begin{figure}
+\begin{lstlisting}
+__kernel void A(__global const char* a, __global char* b, __global char* c) {
+	int d = get_global_id(0);
+	c[d] = get_global_id(0) + c;
+}
+\end{lstlisting}
+\begin{lstlisting}
+__kernel void A(__global ulong* a) {
+  a[get_global_id(0)] = (ulong)(a + 1);
+}
+\end{lstlisting}
+\caption{The implicit conversion of pointers to integers in these two kernel causes Configs.\ $3\pm$ to spin in a loop, consuming 100\% CPU and increasing memory until system memory exhausted and the compiler crashes.}
+\end{figure}
+
+\begin{figure}
+\begin{lstlisting}
+__kernel void entry(__global unsigned char* a, unsigned b) {
+  a[get_global_id(0)] %= 42;
+  barrier(1);
+}
+\end{lstlisting}
+\caption{Configs.\ $8\pm$ spin consuming 100\% CPU usage during code generation.}
+%LLVM ERROR: LLVM2PIL: Cannot yet select: 0x7f72a45a7ed0: i8,i8 = umul_lohi 0x7f72a45a87d0, 0x7f72a45a88d0 [ORD=16] [ID=22]
+%0x7f72a45a87d0: i8 = srl 0x7f72a45a7dd0, 0x7f72a42fff90 [ORD=16] [ID=21]
+%0x7f72a45a7dd0: i8,ch = load 0x7f72a41d9438, 0x7f72a4300790, 0x7f72a4300590<LD1[%scevgep2]> [ORD=15] [ID=20]
+%0x7f72a4300790: i64 = add 0x7f72a45a83d0, 0x7f72a45a80d0 [ORD=14] [ID=17]
+%0x7f72a45a83d0: i64,ch = CopyFromReg 0x7f72a41d9438, 0x7f72a45a86d0 [ORD=14] [ID=13]
+%0x7f72a45a86d0: i64 = Register %vreg1 [ID=1]
+%0x7f72a45a80d0: i64,ch = CopyFromReg 0x7f72a41d9438, 0x7f72a45a81d0 [ORD=14] [ID=14]
+%0x7f72a45a81d0: i64 = Register %vreg2 [ID=2]
+%0x7f72a4300590: i64 = undef [ID=3]
+%0x7f72a42fff90: i8 = Constant<1> [ID=9]
+%0x7f72a45a88d0: i8 = Constant<49> [ID=10]
+\end{figure}
+
+% TODO: Another 3± hang
+%__kernel void A(global int* a) {
+%  local int b[4][3][4][5];
+%	
+%  b[1][2][3][3] = b[3];
+%}
+
+\begin{figure}
+\begin{lstlisting}
+__kernel void A(long a, long b) {
+  while (a > 273444) { }
+}
+
+__kernel void A(__global int* a) {
+  int b = get_global_id(0);
+  while (b < 512) { }
+}
+\end{lstlisting}
+\caption{Configs.\ $4+$, $5+$, $6+$, $7+$ hang.}
+\end{figure}
+
 \subsection{Runtime Crashes}
 
 Figure~\ref{lst:pocl-undefined-symbols} exposes a bug in in which a kernel containing an undefined symbol will successfully compile without warning, then crash the program when attempting to run the kernel. Such a test case is trivial to generate, yet could not be synthesized by CSmith.
@@ -49,3 +110,30 @@ An error in the optimizer of Configs.\ $4+$, $6+$ causes the \texttt{if} stateme
 This is troubling --- 46\% of kernels on GitHub use this \texttt{if} construct to guard against invalid memory accesses. Figure~\ref{lst:compiler-crashes} shows a hand-reduced minimal test case.
 
 \input{lst/wrong-code-bugs}
+
+
+\begin{figure}
+\begin{lstlisting}
+__kernel void A(__global int* a) {
+  a[-1] = 2;
+  a[0] = 1;
+}
+\end{lstlisting}
+\caption{Read of uninitialized automatic variable \texttt{c}.}
+\label{lst:uninit-read}
+\end{figure}
+
+
+\subsection{False Positives}
+
+\begin{figure}
+\begin{lstlisting}
+__kernel void A(__global int* a, __global int* b) {
+  int c[16];
+  int d = get_global_id(0);
+  a[d] = b[d] + c[d];
+}
+\end{lstlisting}
+\caption{Read of uninitialized automatic variable \texttt{c}.}
+\label{lst:uninit-read}
+\end{figure}
