--- a/paper.tex
+++ b/paper.tex
@@ -2,11 +2,13 @@
 
 \begin{document}
 
-\title{Compiler Fuzz Testing through Deep Learning}
+\title{Compiler Fuzzing through Deep Learning}
 % \date{}  % hides the date
 \maketitle
 
 \input{abstract}
+
+\lstset{language=[OpenCL]C}
 
 \input{sec/intro}
 \input{sec/motivation}
