--- a/sec/vs_clsmith.tex
+++ b/sec/vs_clsmith.tex
@@ -93,7 +93,7 @@ Configs.\ $1\pm$, $2\pm$ reject kernels which \texttt{size\_t} parameters.
 %+--------+-----------+--------+
 %|     56 | 1186.8496 |  11222 |
 %+--------+-----------+--------+
-Average CLSmith kernel is 1189 lines long (excluding headers). CLSmith kernels are unreadable, requiring automatic or manual test case reduction.
+The average CLSmith program is 1189 lines long (excluding headers). CLSmith kernels are unreadable, requiring automatic or manual test case reduction.
 %SELECT MIN(linecount) as minlen,
 %->    AVG(linecount) as meanlen,
 %->        MAX(linecount) as maxlen
