--- a/sec/vs_clsmith.tex
+++ b/sec/vs_clsmith.tex
@@ -160,7 +160,7 @@ DeepSmith also triggered 227 \emph{unreachable!} compiler errors, CLSmith trigge
 	\centering %
 	\includegraphics[width=\columnwidth]{build/img/kernel-sizes}%
 	\caption{%
-		Kernel line counts, grouped by classification. DeepSmith test cases are on average two orders of magnitude smaller than CLSmith, rendering reduction unnecessary \cc{TODO: plot outcomes, not classifications. Maybe file size rather than line count? \ldots}.%
+		Kernel line counts, grouped by outcome. DeepSmith test cases are on average two orders of magnitude smaller than CLSmith.%
 	}%
 	\label{fig:kernel-sizes} %
 \end{figure}
